ensure skews always overlap for larger displays

--- a/website/source/assets/stylesheets/_home.scss
+++ b/website/source/assets/stylesheets/_home.scss
@@ -565,6 +565,23 @@ body.page-home {
 		}
 	}
 
+	@media (min-width: 1440px) {
+		#feature-plan{
+			padding: 320px 0 200px;
+			margin-top: -120px;
+		}
+
+		#latest-announcement{
+			margin-top: -120px;
+			padding: 320px 0 180px;
+		}
+
+		#enterprise-intro{
+			margin-top: -120px;
+			padding: 320px 0 180px;
+		}
+	}
+
 	@media (max-width: 992px) {
 
 
